--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.5",
     "bootstrap": "^5.1.3",
+    "graphql": "^16.0.1",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
