--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.5",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.2.2",
     "bootstrap": "^5.1.3",
     "graphql": "^16.0.1",
     "next": "12.0.4",
